* FEA#7548 The creation of an endorsement can now be forbidden by a business rule
* BUG#2067 Add a friendly user error when it is not possible to cancel an endorsement

Version 1.14 - 2017-11-09
* BUG#385 Block the ability to delete an endorsement if it has been applied
* BUG#6003 Override contract option version if its effective date is the same as the previous contract option version
* FEA#7077 Add preconfigured endorsement definitions
* BUG#7120 Remove sub status initialization in coverage modification endorsement
* BUG#7114 Clean up endorsement contents
* BUG#6993 Removing simple json import
* BUG#6998 Add an error message on the endorsement preview if no preview state is defined on the definition
* BUG#6996 The effective date of reactivate endorsement is no more set by defaut to the contract end date if the contract is hold
* BUG#6867 Add an error message on endorsement when the contract status is incompatible with endorsements.
* BUG#6837 Add a method that checks the contract status.
* BUG#6822 Change start date translation in change start date endorsement
* BUG#6636 Fix a crash when managing options of a contract with existing void options
* Allow to void an already renewed contract

Version 1.12 - 2017-04-28
* FEA#0000 If the endorsement application on a single contract generates a document it is now stored on the contract no more on the endorsement
* FEA#0000 Manage linked extra_data in option endorsement
* FEA#0000 Manage authorizations per endorsement definition

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Allow to skip irrelevant endorsement parts
* FEA#0000 Add endorsements entry point
* FEA#0000 Add Manage Contacts endorsement
* FEA#0000 Add recalculate contract step
* FEA#0000 Allow to properly chain endorsements

Version 1.6 - 2015-12-23
* FEA#0000 Add Manage options endorsement
* FEA#0000 Add contract subscriber change endorsement