@@ -19,3 +19,4 @@ xml:
     group.xml
     general_configuration.xml
     authorizations.xml
+    rule_engine.xml
