@@ -14,4 +14,7 @@ this repository contains the full copyright notices and license terms. -->
     <label name="end_date"/>
     <field name="end_date"/>
     <field name="extra_data" no_command="1" colspan="2"/>
+    <newline/>
+    <field name="manager"/>
+    <newline/>
 </form>
